alb.tf
resource "aws_lb" "web_alb" { ... }
resource "aws_lb_target_group" "web_tg" { ... }
resource "aws_lb_listener" "http_listener" { ... }
